methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (vuBiscuit=false){
                  ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (vuBiscuit=false){
  ^